# DecentralizedExchange

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
docs/: Architecture.md  DevelopmentChecklist.md  DevelopmentProgress.md
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: market_test.rs  order_test.rs
