[package]
name = "solana_rust_dex"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A decentralized exchange built with Rust on Solana"
readme = "README.md"
license = "MIT"

[dependencies]
solana-program = "1.17.0"
solana-sdk = "1.17.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.50"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []

[dev-dependencies]
solana-program-test = "1.17.0"
solana-validator = "1.17.0"
